# OEM-Toolbox-Training

./: .clang-format  .gitignore  README.md  run.sh
documentation/: Lab1.doc  Lab1.odt  Lab2.doc  Lab2.odt  Lab4.doc  Lab4.odt  init_sw.sh  note_ssh_key.txt
init_modbus/: CMakeLists.txt
init_modbus/src/: main.c  request.c
iotHub/: .gitignore  CMakeLists.txt  README.md
iotHub/src/: iothub_client_NB301_mqtt.c  iothub_client_sample_mqtt.c
iotHub_mbtcp/: .gitignore  CMakeLists.txt  ConnectionString.txt  README.md
iotHub_mbtcp/inc/: message.h  nb_zmq_mbtcp.h
iotHub_mbtcp/src/: iothub_client_NB301_mqtt.c  nb_zmq_mbtcp.c
json_example/: CMakeLists.txt  toolchainNB.cmake
json_example/inc/: mb_data_message.h  message.h
json_example/src/: main.cpp  mb_data_message.cpp  mb_data_message.h
public/: index.html
simple_webapp/: .gitignore
simple_webapp/public/: index.html
simple_webapp/public/javascripts/: index.js
update-time/: CMakeLists.txt  readme.md
update-time/include/: request.h
update-time/src/: main.c  request.c
uuid/: CMakeLists.txt  readme.txt  testmac.txt
uuid/inc/: uuid.h
uuid/src/: main.c  uuid.c  uuid_test.c
uuid/test/: mac_file.txt
